made changes to footer

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     </section>
 
     <footer>
-        <div class="footer"></div>
-        <p class="made-by">Made by</p>
-        <p class="auther">Het Gurjar</p>
+        <div class="footer">
+            <p class="made-by">Made by</p>
+            <p class="auther">Het Gurjar</p>
+        </div>
     </footer>
 </body>
 
