--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="todo">
+    <div class="todo-container">
         <h2>To-Do</h2>
         <!-- To do Input field and button -->
         <div class="input">
@@ -18,28 +18,28 @@
         </div>
 
         <!-- To Do list Items -->
-        <div>
+        <div class="todo-list-items-container">
             <ul class="scroll">
                 <li id="todoListItem"></li>
             </ul>
         </div>
 
         <!-- list items counter and delete button -->
-        <div>
+        <div class="todo-list-info-container">
             <hr class="counter">
             <div class="counter-container">
                 <p><span>0</span> items total</p>
                 <button id="deleteButton">Delete all</button>
             </div>
         </div>
-    </section>
+    </div>
 
-    <footer>
-        <div class="footer">
+    <div class="footer">
+        <div class="footer-container">
             <p class="made-by">Made by</p>
             <p class="auther">Het Gurjar</p>
         </div>
-    </footer>
+    </div>
 </body>
 
 </html>
