changed input class name to input-container

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="todo-container">
         <h2>To-Do</h2>
         <!-- To do Input field and button -->
-        <div class="input">
+        <div class="input-container">
             <input type="text" class="input-field" id="todoInput" placeholder="Add a new Todo">
             <button class="add-todo-btn">Add</button>
         </div>
