--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="footer">
         <div class="footer-container">
             <p class="made-by">Made by</p>
-            <p class="auther">Het Gurjar</p>
+            <p class="author">Het Gurjar</p>
         </div>
     </div>
 </body>
