--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- To do Input field and button -->
         <div class="input-container">
             <input type="text" class="input-field" id="todoInput" placeholder="Add a new Todo">
-            <button class="add-todo-btn">Add</button>
+            <button id="add-todo-btn">Add</button>
         </div>
 
         <!-- To Do list Items -->
@@ -29,7 +29,7 @@
         <div class="todo-list-info-container">
             <hr class="counter">
             <div class="counter-container">
-                <p><span>0</span> items total</p>
+                <p><span id="todoCount">0</span> items total</p>
                 <button id="deleteButton">Delete all</button>
             </div>
         </div>
